src/scss/_root.scss
::selection {
  background-color: var(--accent-primary);
}

::-webkit-scrollbar {
  height: 6px;
  width: 6px;
}

::-webkit-scrollbar-track {
  background-color: var(--scrollbar-track);
  border-radius: 2px;
}

::-webkit-scrollbar-thumb {
  background-color: var(--scrollbar-thumb);
  border-radius: 2px;
}

html, body {
  background-color: var(--bg-primary);
  color: var(--text-primary);
  
  margin: 0;
  padding: 0;

  height: 100%;
  font-family: 'Nunito', Helvetica, sans-serif;
  font-size: 14px;

  transition-duration: 0.3s;

  @media (min-width: 2000px) {
    font-size: 16px;
  }
}

a {
  color: var(--accent-primary);
}

.spacer {
  flex: 1 1;
}

@media (max-width: 512px) {
  .sm-hide {
    display: none;
  }
}

@media (min-width: 512px) {
  .sm-show {
    display: none;
  }
}

